--- a/style.css
+++ b/style.css
@@ -181,7 +181,19 @@ a {
 color:white;
 }
 
-a:hover {/*マウスが上に乗っている状態*/
+a:hover {
 color:gray;
 text-decoration:underline;
+}
+
+.js-animation {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(40px);
+  transition: all 1s;
+}
+.js-animation.is-show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
 }
