--- a/style.css
+++ b/style.css
@@ -197,3 +197,23 @@ text-decoration:underline;
   visibility: visible;
   transform: translateY(0px);
 }
+
+.language {
+  font-size: calc(1rem + 2vw);
+  float: right;
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  text-decoration: none;
+  opacity: 0.7;
+}
+
+.languageja {
+  font-size: calc(1rem + 2vw);
+  float: right;
+  position: fixed;
+  right: 4rem;
+  top: 1rem;
+  text-decoration: none;
+  opacity: 0.7;
+}
